# bevy_blacklight_material

./: Cargo.toml  README.md
assets/shaders/: blacklight_material.wgsl
src/: lib.rs
